Added vending machine and improved ATM design