@@ -58,7 +58,7 @@ public class MinHeapFromScratch {
             throw new NoSuchElementException("Heap is empty. Cannot peek.");
         }
         // The minimum element is always at the root (index 0).
-        return heap.getFirst();
+        return heap.get(0);
     }
 
     /**
@@ -90,15 +90,15 @@ public class MinHeapFromScratch {
         }
 
         // 1. The root (index 0) is the minimum value. Store it to return later.
-        int minValue = heap.getFirst();
+        int minValue = heap.get(0);
 
         // 2. Take the last element in the heap and move it to the root.
         // This maintains the "complete binary tree" shape.
-        int lastElement = heap.getLast();
+        int lastElement = heap.get(heap.size() - 1);
         heap.set(0, lastElement);
 
         // 3. Remove the last element (which we just moved).
-        heap.removeLast();
+        heap.remove(heap.size() - 1);
 
         // 4. "Bubble down" (or heapifyDown) the new root to its
         // correct position to restore the heap property.
